2024-04-30T16:15:24Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8898160311 # 230
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-30
* notice: last 14d: unq all: 4 9
* notice: prev accum: outdated-unq outdated-all / unq all: 896 1635 / 903 1647
* notice: next accum: outdated-unq outdated-all / unq all: 898 1638 / 903 1647
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-04-16] / []

2024-04-30T00:53:50Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8887560456 # 228
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-30
* notice: last 14d: unq all: 5 11
* notice: prev accum: outdated-unq outdated-all / unq all: 894 1633 / 903 1647
* notice: next accum: outdated-unq outdated-all / unq all: 896 1635 / 903 1647
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +2 +3 -0 -1 / 2 2
* notice: removed / changed dates: [2024-04-15] / [2024-04-16]

2024-04-29T00:54:58Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8871739254 # 225
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-29
* notice: last 14d: unq all: 5 14
* notice: prev accum: outdated-unq outdated-all / unq all: 893 1632 / 903 1647
* notice: next accum: outdated-unq outdated-all / unq all: 894 1633 / 903 1647
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-04-14] / []

2024-04-24T16:14:18Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8819804032 # 212