@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2024-04-30T16:15:24Z",
+  "timestamp" : "2024-05-01T00:58:08Z",
   "count_outdated" : 1638,
   "uniques_outdated" : 898,
-  "count" : 1647,
-  "uniques" : 903,
+  "count" : 1648,
+  "uniques" : 904,
   "clones" : [
     {
       "timestamp": "2024-04-17T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count_decinc": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -37,6 +37,15 @@
       "count": 3,
       "count_minmax": [ 3, 3 ],
       "count_decinc": [ 0, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-04-30T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
