@@ -1,10 +1,10 @@
 {
   "count": 9,
-  "uniques": 4,
+  "uniques": 5,
   "clones": [
     {
       "timestamp": "2024-04-17T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -20,6 +20,11 @@
     {
       "timestamp": "2024-04-24T00:00:00Z",
       "count": 3,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-04-30T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
